--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+<!-- 				<version>3.1</version> -->
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -217,7 +217,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
+<!-- 				<version>2.6</version> -->
 				<configuration>
 					<delimiters>
 						<delimiter>${*}</delimiter>
